--- a/yeti/bootswatch.less
+++ b/yeti/bootswatch.less
@@ -572,9 +572,17 @@ footer {
 article,
 aside.widgets {
   img {
-	display: block;
-	max-width: 100%;
-	height: auto;
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+article {
+  h2:first-of-type {
+    margin-top: 0;
+    padding-top: 0;
   }
 }
 
